--- a/src/assets/portfolio_toml/bio.toml
+++ b/src/assets/portfolio_toml/bio.toml
@@ -33,7 +33,7 @@ break = true
 # en
 [[body_en]]
 type  = "plain"
-text  = "KOSEN (a.k.a. National College of Technology) student"
+text  = "KOSEN (a.k.a. National College of Technology) Student"
 break = true
 
 [[body_en]]
@@ -48,16 +48,16 @@ break = true
 
 [[body_en]]
 type  = "plain"
-text  = "I eager to"
+text  = "I'm eager to "
 break = false
 
 [[body_en]]
 type  = "link"
 link  = "https://scrapbox.io/watasuke/%E5%A4%A2%E3%83%BB%E5%B0%86%E6%9D%A5%E5%83%8F%EF%BC%9F"
-text  = " reduce human tasks "
+text  = "reduce human tasks"
 break = false
 
 [[body_en]]
 type  = "plain"
-text  = "by using these technology"
+text  = " by using these technology"
 break = true
