--- a/package.json
+++ b/package.json
@@ -66,6 +66,18 @@
     "typescript": "^5.4.5",
     "unist-util-visit": "^5.0.0"
   },
+  "overrides": {
+    "gatsby-plugin-react-svg": {
+      "svg-react-loader": {
+        "loader-utils": "^1.4.2",
+        "json5": "^1.0.2",
+        "xml2js": "^0.5.0"
+      },
+      "ogp-parser": {
+        "fast-xml-parser": "^4.1.2"
+      }
+    }
+  },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@typescript-eslint/eslint-plugin": "^7.7.1",
